
	* octave-stream.cc (octave_base_stream::write): Rename flt_fmt to ffmt.
	(octave_base_stream::read): Likewise.

	* TEMPLATE-INST/SLStack-sym.cc: Delete meaningless `extern
	template' declarations.
	* TEMPLATE-INST/Array-tc.cc: Ditto.

	* TEMPLATE-INST/Map-fnc.cc: Don't try to instantiate goodCHptr or
	CHptr_to_index here.
	* TEMPLATE-INST/Map-tc.cc: Likewise.

	* load-save.cc (read_binary_file_header): Declare magic_len `const'.

	* token.h (token::token (const token&), token::operator=):
	Delete unnecessary definitions.

	* oct-stream.cc (octave_stream::mode_as_string): Use
	std::ios::binary, not std::ios::bin.
	* load-save.cc (Fsave, Fload, save_user_variables): Likewise.

	* DLD-FUNCTIONS/qz.cc (Fqz): Use Array<int> class instead of
	trying to create automatic int array with variable size.

	* variables.cc (F__dump_symbol_info__): Fix continuation char.
	* mappers.cc (Ftoupper): Likewise.
	* DLD-FUNCTIONS/besselj.cc (Fairy, Fbesselj): Likewise.
	* DLD-FUNCTIONS/chol.cc (Fchol): Likewise.
	* DLD-FUNCTIONS/det.cc (Fdet): Likewise.
	* DLD-FUNCTIONS/eig.cc (Feig): Likewise.
	* DLD-FUNCTIONS/gammainc.cc (gammainc): Likewise.
	* DLD-FUNCTIONS/givens.cc (givens): Likewise.
	* DLD-FUNCTIONS/hess.cc (hess): Likewise.
	* DLD-FUNCTIONS/inv.cc (inv): Likewise.
	* DLD-FUNCTIONS/log.cc (logm): Likewise.
	* DLD-FUNCTIONS/lu.cc (lu): Likewise.
	* DLD-FUNCTIONS/qr.cc (qr): Likewise.
	* DLD-FUNCTIONS/schur.cc (schur): Likewise.
	* DLD-FUNCTIONS/balance.cc (balance): Likewise.
	* DLD-FUNCTIONS/svd.cc (svd): Likewise.
	* DLD-FUNCTIONS/syl.cc (syl): Likewise.
	* DLD-FUNCTIONS/expm.cc (Fexpm): Likewise.

	* token.h (token::token_type, token::end_tok_type,
	token::plot_tok_type): Delete extraneous comma from enum decls.
	* load-save.cc (load_save_format): Likewise.

	* pt-idx.cc (tree_index_expression::tree_index_expression):
	Delete default arg values.
	* oct-fstrm.cc (octave_fstream::octave_fstream): Likewise.
	* oct-stream.cc (octave_stream::octave_stream): Likewise.
